--- a/index.html
+++ b/index.html
@@ -255,12 +255,11 @@
 
 
         <!-- Footer Start -->
-        <div class="footer wow fadeIn" data-wow-delay="0.3s">
-            <div class="card bg-dark text-white">
-                <img src="img/pmb1.jpg" class="card-img" alt="...">
-                
+        <!--div class="footer " -->
+            <div class="card bg-dark text-white wow fadeIn" data-wow-delay="0.3s">
+                <a href="pmb.ukdw.ac.id"><img src="img/pmb1.jpg" class="card-img" alt="Pmb"></a>
             </div>
-        </div>
+        <!--/div-->
         <!-- Footer End -->
 
         <!-- JavaScript Libraries -->
