--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <!-- Footer Start -->
         <!--div class="footer " -->
             <div class="card bg-dark text-white wow fadeIn" data-wow-delay="0.3s">
-                <a href="https://pmb.ukdw.ac.id/"><img src="img/pmb1.jpg" class="card-img" alt="Pmb"></a>
+                <a href="https://getbootstrap.com/"><img src="img/pmb1.jpg" class="card-img" alt="Pmb"></a>
             </div>
         <!--/div-->
         <!-- Footer End -->
