--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta content="Free Website Template" name="description">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="img/fti.png" rel="icon">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
@@ -46,21 +46,21 @@
                     <div class="col-md-8">
                         <div class="top-bar-left">
                             <div class="text">
-                                <h2>admin@fti.ukdw.ac.id</h2>
+                                <h2>fti@staff.ukdw.ac.id</h2>
                             </div>
                             <div class="text">
                                 <i class="fa fa-phone-alt"></i>
-                                <h2>+123456789</h2>
+                                <h2>+62–274–563929</h2>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="top-bar-right">
                             <div class="social">
-                                <a href=""><i class="fab fa-twitter"></i></a>
-                                <a href=""><i class="fab fa-facebook-f"></i></a>
-                                <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href="https://twitter.com/ftiukdw"><i class="fab fa-twitter"></i></a>
+                                <a href="https://www.facebook.com/FTIUKDW"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://www.ukdw.ac.id/akademik/fakultas-teknologi-informasi/"><i class="fab fa-globe"></i></a>
+                                <a href="https://www.instagram.com/ftiukdw/"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
