--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <div class="social">
                                 <a href="https://twitter.com/ftiukdw"><i class="fab fa-twitter"></i></a>
                                 <a href="https://www.facebook.com/FTIUKDW"><i class="fab fa-facebook-f"></i></a>
-                                <a href="https://www.ukdw.ac.id/akademik/fakultas-teknologi-informasi/"><i class="fab fa-globe"></i></a>
+                                <a href="https://www.ukdw.ac.id/akademik/fakultas-teknologi-informasi/"><i class="fa fa-globe"></i></a>
                                 <a href="https://www.instagram.com/ftiukdw/"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
