--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <div class="col-md-8">
                         <div class="top-bar-left">
                             <div class="text">
+                                <i class="fa fa-envelope"></i>
                                 <h2>fti@staff.ukdw.ac.id</h2>
                             </div>
                             <div class="text">
