--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Landing Page</title>
+        <title>Fakultas Teknologi Informasi</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
@@ -129,7 +129,7 @@
                         <div class="blog-text">
                             <h2>Willy Sudarto Raharjo, S.Kom., M.Cs.</h2>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non vulpte liqum metus tortor
+                                AWS Educate Cloud Ambassador
                             </p>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                         <div class="blog-text">
                             <h2>Erick Kurniawan, M.Kom.</h2>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non vulpte liqum metus tortor
+                                Microsoft MVP, Microsoft Certified Trainer
                             </p>
                         </div>
                     </div>
@@ -151,43 +151,10 @@
                         <div class="blog-text">
                             <h2>Dr. phil. Lucia Dwi Krisnawati, SS., M.A.</h2>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non vulpte liqum metus tortor
+                                Penerima Program Hibah Wikimedia Foundation melalui Wikimedia Indonesia Untuk Pengembangan Perangkat lunak Optical Character Recognition (OCR) aksara Jawa  (Juni 2018- Juni 2021)
                             </p>
                         </div>
                     </div>
-                    <!--div class="blog-item">
-                        <div class="blog-img">
-                            <img src="img/testimonial-4.jpg" alt="Image" height="350">
-                        </div>
-                        <div class="blog-text">
-                            <h2>Lorem ipsum dolor</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non vulpte liqum metus tortor
-                            </p>
-                        </div>
-                    </div-->
-                    <!--div class="blog-item">
-                        <div class="blog-img">
-                            <img src="img/team-1.jpg" alt="Image" height="350">
-                        </div>
-                        <div class="blog-text">
-                            <h2>Lorem ipsum dolor</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non vulpte liqum metus tortor
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog-item">
-                        <div class="blog-img">
-                            <img src="img/team-1.jpg" alt="Image" height="350">
-                        </div>
-                        <div class="blog-text">
-                            <h2>Lorem ipsum dolor</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non vulpte liqum metus tortor
-                            </p>
-                        </div>
-                    </div-->
                 </div>
             </div>
         </div>
@@ -197,6 +164,7 @@
         <div class="testimonial wow fadeInUp" data-wow-delay="0.1s">
             <div class="container">
                 <div class="section-header text-center">
+                    <p>Prestasi</p>
                     <h2>Mahasiswa</h2>
                 </div>
                 <div class="owl-carousel testimonials-carousel">
@@ -206,10 +174,10 @@
                         </div>
                         <div class="testimonial-text">
                             <p>
-                                Lorem ipsum dolor sit amet consec adipis elit. Etiam accums lacus eget velit tincid, quis suscip justo dictum.
+                                Machine Learning with Tensorflow Developer Certificate
                             </p>
-                            <h3>Customer Name</h3>
-                            <h4>Profession</h4>
+                            <h3>Jesslyn Septhia</h3>
+                            <h4>Program Bangkit 2021</h4>
                         </div>
                     </div>
                     <div class="testimonial-item">
@@ -218,10 +186,10 @@
                         </div>
                         <div class="testimonial-text">
                             <p>
-                                Lorem ipsum dolor sit amet consec adipis elit. Etiam accums lacus eget velit tincid, quis suscip justo dictum.
+                                Mobile Development with Associate Android Developer Certification
                             </p>
-                            <h3>Customer Name</h3>
-                            <h4>Profession</h4>
+                            <h3>Nafarel Triyoga Maskuncoro</h3>
+                            <h4>Program Bangkit 2021</h4>
                         </div>
                     </div>
                     <div class="testimonial-item">
@@ -230,22 +198,46 @@
                         </div>
                         <div class="testimonial-text">
                             <p>
-                                Lorem ipsum dolor sit amet consec adipis elit. Etiam accums lacus eget velit tincid, quis suscip justo dictum.
+                                Cloud Computing with Associate Cloud Engineer Certification
                             </p>
-                            <h3>Customer Name</h3>
-                            <h4>Profession</h4>
+                            <h3>Desendo Imanuel</h3>
+                            <h4>Program Bangkit 2021</h4>
                         </div>
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-img">
-                            <img src="img/team-4.jpg" alt="Image">
+                            <img src="img/eben.jpeg" alt="Image">
                         </div>
                         <div class="testimonial-text">
                             <p>
-                                Lorem ipsum dolor sit amet consec adipis elit. Etiam accums lacus eget velit tincid, quis suscip justo dictum.
+                                Mobile Development with Associate Android Developer Certification 
                             </p>
-                            <h3>Customer Name</h3>
-                            <h4>Profession</h4>
+                            <h3>Ebentera Santosa</h3>
+                            <h4>Program Bangkit 2021</h4>
+                        </div>
+                    </div>
+                    <div class="testimonial-item">
+                        <div class="testimonial-img">
+                            <img src="img/stevani.jpeg" alt="Image">
+                        </div>
+                        <div class="testimonial-text">
+                            <p>
+                                Machine Learning with Tensorflow Developer Certificate
+                            </p>
+                            <h3>Stevani Dwi Utomo</h3>
+                            <h4>Program Bangkit 2021</h4>
+                        </div>
+                    </div>
+                    <div class="testimonial-item">
+                        <div class="testimonial-img">
+                            <img src="img/hezkiel.jpeg" alt="Image">
+                        </div>
+                        <div class="testimonial-text">
+                            <p>
+                                Mobile Development with Associate Android Developer Certification
+                            </p>
+                            <h3>Hezkiel Rivaldo Siregar</h3>
+                            <h4>Program Bangkit 2021</h4>
                         </div>
                     </div>
                 </div>
