--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="owl-carousel testimonials-carousel">
                     <div class="testimonial-item">
                         <div class="testimonial-img">
-                            <img src="img/team-1.jpg" alt="Image">
+                            <img src="img/jess.jpeg" alt="Image">
                         </div>
                         <div class="testimonial-text">
                             <p>
@@ -182,7 +182,7 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-img">
-                            <img src="img/team-2.jpg" alt="Image">
+                            <img src="img/nafrael.jpeg" alt="Image">
                         </div>
                         <div class="testimonial-text">
                             <p>
@@ -194,7 +194,7 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-img">
-                            <img src="img/team-3.jpg" alt="Image">
+                            <img src="img/desendo.jpeg" alt="Image">
                         </div>
                         <div class="testimonial-text">
                             <p>
