Sudah di revisi

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                     <div class="col-lg-7 col-md-6">
                         <div class="section-header text-left">
-                            <p>Learn About Us</p>
+                            <!--p>Learn About Us</p-->
                             <h2>Welcome to FTI UKDW</h2>
                         </div>
                         <div class="about-text">
